--- a/worksheets/worksheet-00.tex
+++ b/worksheets/worksheet-00.tex
@@ -178,13 +178,13 @@ Let's talk about the most important/common types of problems encountered in CS.
     \caption{Examples of applications}
     \begin{tabular}{|l|}
         \hline
-        Find is the best route between two cities.\\\hline
-        Find the closest pair among $n$ points in the plane. \\\hline
-        Search an entire gene sequence for a particular subsequence of characters. \\\hline
-        Rank Internet search results. \\\hline
-        Compute the roots of a polynomial function. \\\hline
-        Retrieve information from a large database. \\\hline
-        Find a subset of numbers in a list that sum to zero. \\\hline
+        Find the \textbf{best route} between two cities.\\\hline
+        Find the \textbf{closest pair} among $n$ points in the plane. \\\hline
+        Search an entire gene sequence for a particular \textbf{subsequence of characters}. \\\hline
+        \textbf{Rank search results} on the Internet. \\\hline
+        Compute the \textbf{roots of a polynomial} function. \\\hline
+        Quickly \textbf{retrieve information} from a large database. \\\hline
+        \textbf{Find a subset} of numbers in a list that sum to zero. \\\hline
     \end{tabular}
 \end{table}
 
