--- a/homework/homework-01.tex
+++ b/homework/homework-01.tex
@@ -14,11 +14,11 @@
 
 You are given two lists of sorted numbers. Design an algorithm to find all the common elements in the two lists. For example, given \verb+[4, 7, 7, 7]+ and \verb+[4, 4, 6, 7, 7, 9]+, the output should be \verb+[4, 7, 7]+. 
 
-\begin{itemize}
+\begin{enumerate}[a.]
     \item Describe your algorithm as pseudocode.
     \item Explain why it works correctly.
     \item What is the maximum number of comparisons your algorithm makes, in terms of the lengths of the two lists (call them $m$ and $n$, respectively)?
-\end{itemize}
+\end{enumerate}
 
 
 \clearpage
