--- a/worksheets/common.tex
+++ b/worksheets/common.tex
@@ -6,6 +6,7 @@
 \usepackage{cancel}					% To use the slash to cancel out stuff in work
 \usepackage[shortlabels]{enumitem}
 \usepackage{hyperref}
+\usepackage{jigsaw}
 
 \usepackage{algorithm,caption}
 \usepackage{algpseudocodex}
