--- a/worksheets/common.tex
+++ b/worksheets/common.tex
@@ -1,6 +1,7 @@
 
 \usepackage[margin=1in]{geometry}		% For setting margins
 \usepackage{amsmath}				% For Math
+\usepackage{amsthm}
 \usepackage{fancyhdr}				% For fancy header/footer
 \usepackage{graphicx}				% For including figure/image
 \usepackage{cancel}					% To use the slash to cancel out stuff in work
