--- a/homework/homework-03.tex
+++ b/homework/homework-03.tex
@@ -16,7 +16,7 @@ If you did not understand or complete the \textbf{Matrix Determinant} question f
 
 \section{Options}
 
-Choose any 3 (three) of the following to complete. For each that you work on, you should include a discussion of your algorithm itself, a rationale (proof) of the correctness, and evaluate its efficiency. Don't just right pseudocode and formulas -- you need to include text explaining what's going on.
+Choose any 3 (three) of the following to complete. For each that you work on, you should include a discussion of your algorithm itself, a rationale (proof) of the correctness, and evaluate its efficiency. Don't just write pseudocode and formulas -- you need to include text explaining what's going on.
 
 \subsection{Line Up}
 
