--- a/homework/homework-03.tex
+++ b/homework/homework-03.tex
@@ -16,7 +16,7 @@ If you did not understand or complete the \textbf{Matrix Determinant} question f
 
 \section{Options}
 
-Choose any 3 (three) of the following to complete. For each that you work on, you should include a discussion of your algorithm itself, a rationale (proof) of the correctness, and evaluate its efficiency. Don't just write pseudocode and formulas -- you need to include text explaining what's going on.
+Choose any 3 (three) of the following to complete. For each that you work on, you should include (1) a discussion of your algorithm itself, (2) a rationale (proof) of the correctness, and (3) evaluate its efficiency. Don't just write pseudocode and formulas -- you need to include text explaining what's going on.
 
 \subsection{Line Up}
 
@@ -44,6 +44,8 @@ Suppose you have an array $A[0..n-1]$ of distinct numbers consisting of a decrea
 \subsection{Bitonic Array}
 
 Complete Exercise 30 (Chapter 1) on pages 60-61 of the textbook. 
+
+You might want to follow a set of steps as itemized in the previous exercise: an example(s), diagram(s), then an algorithm.
 
 
 \subsection{Median Finding}
