--- a/homework/homework-04.tex
+++ b/homework/homework-04.tex
@@ -66,7 +66,7 @@ A magic square  of order $n$ is an arrangement of the integers from 1 to $n^2$ i
 
 \section{Addition Chain}
 
-Exercise 3, Chapter 2 (page 94) in the textbook.
+Exercise 3(a), Chapter 2 (page 94) in the textbook.
 
 
 
