--- a/homework/homework-04.tex
+++ b/homework/homework-04.tex
@@ -47,7 +47,7 @@ The goal in this exercise is to solve the following problem:
             and return that set.
     \end{verbatim}
 
-    \item Describe an algorithm that takes an $n$-node path $G$ with weights and returns an independent set of maximum total weight. The running time should be polynomial in $n$, independent of the values of the weights. (Try, if you can, to define and solve a recurrence relation for the running time of your algorithm.)
+    \item Describe a recursive backtracking algorithm that takes an $n$-node path $G$ with weights and returns an independent set of maximum total weight. 
 \end{itemize}
 
 
