--- a/homework/homework-06.tex
+++ b/homework/homework-06.tex
@@ -48,5 +48,7 @@ For example, suppose
 
 Then your algorithm should produce 4. 
 
+(Hint: Maybe research the \emph{0-1 Knapsack problem} and dynamic programming algorithm.)
+
 \end{document}
 
